@@ -3,18 +3,11 @@
 require 'spec_helper'
 
 RSpec.describe Kiba::Extend::Transforms::Rename::Field do
-  let(:accumulator){ [] }
-  let(:test_job){ Helpers::TestJob.new(input: input, accumulator: accumulator, transforms: transforms) }
-  let(:result){ test_job.accumulator }
+  let(:transform){ Rename::Field.new(from: :sex, to: :gender) }
+  let(:results){ rows.map{ |row| transform.process(row) } }
 
-  let(:transforms) do
-    Kiba.job_segment do
-      transform Rename::Field, from: :sex, to: :gender
-    end
-  end
-
-  context 'when target field exists' do
-    let(:input) do
+  context 'when from field exists' do
+    let(:rows) do
       [
         {name: 'Weddy', sex: 'm'},
         {name: 'Kernel', sex: 'f'}
@@ -29,12 +22,32 @@ RSpec.describe Kiba::Extend::Transforms::Rename::Field do
     end
     
     it 'renames field' do
-      expect(result).to eq(expected)
+      expect(results).to eq(expected)
     end
   end
 
-  context 'when target field does not exist' do
-    let(:input) do
+  context 'when to field already exists' do
+    let(:rows) do
+      [
+        {name: 'Weddy', sex: 'm', gender: 'nonbinary'}
+      ]
+    end
+
+    let(:expected) do
+      [
+        { name: 'Weddy', gender: 'm' },
+      ]
+    end
+    
+    it 'renames field and warns of replacement', :aggregate_failures do
+      msg = "#{Kiba::Extend.warning_label}: Renaming `sex` to `gender` overwrites existing `gender` field data"
+      expect(transform).to receive(:warn).with(msg)
+      expect(results).to eq(expected)
+    end
+  end
+
+  context 'when from field does not exist' do
+    let(:rows) do
       [
         {name: 'Weddy'},
       ]
@@ -47,11 +60,10 @@ RSpec.describe Kiba::Extend::Transforms::Rename::Field do
     end
     
     it 'returns row unchanged and warns', :aggregate_failures do
-      expect(result).to eq(expected)
       msg = "#{Kiba::Extend.warning_label}: Cannot rename field: `sex` does not exist in row"
-      xform = Rename::Field.new(from: :sex, to: :gender)
-      expect(xform).to receive(:warn).with(msg)
-      xform.process(input.first)
+      expect(transform).to receive(:warn).with(msg)
+      expect(results).to eq(expected)
+
     end
   end
 end
